added teleconference module ,

--- a/jitsi-full-config.json
+++ b/jitsi-full-config.json
@@ -1,8 +1,8 @@
 {
-  "timestamp": "2025-12-26T16:45:59.427Z",
-  "server": "localhost:8443",
+  "timestamp": "2026-01-02T10:09:58.718Z",
+  "server": "91.108.121.232",
   "configuration": {
-    "roomName": "CareConnect_12345_3ed4bbe9ac9b791b",
+    "roomName": "CareConnect_12345_2d4050aa0c654266",
     "width": "100%",
     "height": "600px",
     "parentNode": null,
