--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.16.0",
     "node-cron": "^4.2.1",
+    "pdfkit": "^0.15.0",
     "resend": "^3.2.0",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
